﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2020-03-01
	Fixed: Parent finding was declaring self as parent. Now correctly reports actual parent process if found.
### 2020-02-26
	Fixed: ArgumentOutOfRange exception in LogListRetrieveItem. Hopefully.
### 2020-02-24
	Changed: Crashes are now more descriptive if the error occurs deeper in the code.
### 2020-01-18
	Fixed: Invocation problems that were introduced due to recent changes.
### 2020-01-??
	Changed: Internal changes that should not be visible to end-user.
### 2020-01-10
	Added: Tabs for the log. Warnings tab that just shows warnings. This will likely be scrapped later and changed into log filtering.
### 2020-01-09
	Changed: Altered some process handling logic to attempt to fix a handling counter leak. Uncertain if the problem is fixed as nothing observed seems to suggest the leak should happen under any conditions.
	Changed: Recheck should not delay normal logic, it is no longer waited on.
	Changed: Used cached process info more often and generally alter how processes are cached.
	Changed: Add missing processing states.
	Fixed: Detecting already running process would create crash log.
### 2020-01-03
	Added: Configuration for maximum component load time (default 120s). No UI configuration yet.
### 2019-12-22
	Fixed: SynchronizationLockException due to using thread locking when it made no sense.
### 2019-12-19
	Fixed: Don't output IOException when failing to gain access to executable for legacy testing.
	Fixed: Odd update issues with the log list.
	Added: Trace log status is shown in the normal log as well if enabled.
### 2019-12-17
	Changed: Stop logging voluntary crashes.
### 2019-12-16
	Changed: Make internal code report power plan/behaviour changes more explicitly.
	Changed: Session start high performance _reset_ should be skipped if anything else has changed the power behaviour.
### 2019-12-08